--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,8 +1,10 @@
-<ngx-spinner type="line-scale-pulse-out-rapid">
-    <h3>Loading...</h3>
+<ngx-spinner
+  *ngIf="busyService.loading$ | async"
+  type="line-scale-pulse-out-rapid"
+>
+  <h3>Loading...</h3>
 </ngx-spinner>
 <app-nav></app-nav>
 <div class="container" style="margin-top: 100px;">
     <router-outlet></router-outlet>
 </div>
-
