initial service add

--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -23,6 +23,9 @@
                   <li class="nav-item" *appHasRole="['Admin', 'Moderator']">
                       <a routerLink="/admin" routerLinkActive="active" class="nav-link">Admin</a>
                   </li>
+                  <li class="nav-item">
+                      <a routerLink="/dashboard" routerLinkActive="active" class="nav-link">Dashboard</a>
+                  </li>
               }
               <li class="nav-item active">
                   <a routerLink="/errors" routerLinkActive="active" class="nav-link">Errors</a>
